@@ -116,6 +116,13 @@ site management folder is created:
   >>> default.__class__
   <class 'zope.site.site.SiteManagementFolder'>
 
+However, you can tell not to create the default site manager folder on
+LocalSiteManager creation:
+
+  >>> nodefault = site.LocalSiteManager(myfolder, default_folder=False)
+  >>> 'default' in nodefault
+  False
+
 You can easily create a new site management folder:
 
   >>> sm['mySMF'] = site.SiteManagementFolder()
@@ -314,7 +321,7 @@ Now the next site manager for `myfolder11`'s site manager should have changed:
   >>> myfolder.getSiteManager().subs
   ()
 
-Finally, we make a copy of `myfolder21` and add it as `myfolder11` to
+Now, we make a copy of `myfolder21` and add it as `myfolder11` to
 `myfolder`:
 
   # Make sure that our interfaces and classes are picklable.
@@ -325,8 +332,8 @@ Finally, we make a copy of `myfolder21` and add it as `myfolder11` to
   >>> sys.modules['zope.site.tests'].MyUtility = MyUtility
   >>> MyUtility.__module__ = 'zope.site.tests'
 
-  >>> from zope.location.pickling import locationCopy
-  >>> myfolder['myfolder11'] = locationCopy(myfolder2['myfolder21'])
+  >>> from zope.copy import copy
+  >>> myfolder['myfolder11'] = copy(myfolder2['myfolder21'])
 
   >>> myfolder11 = myfolder['myfolder11']
   >>> myfolder11.getSiteManager().__bases__ == (myfolder.getSiteManager(), )
@@ -334,4 +341,16 @@ Finally, we make a copy of `myfolder21` and add it as `myfolder11` to
   >>> myfolder.getSiteManager().subs[0] is myfolder11.getSiteManager()
   True
   >>> myfolder2.getSiteManager().subs[0] is myfolder21.getSiteManager()
+  True
+
+Finally, let's check that everything works fine when our folder is moved
+to the folder that doesn't contain any site manager. Our folder's
+sitemanager's bases should be set to global site manager.
+
+  >>> myfolder11.getSiteManager().__bases__ == (myfolder.getSiteManager(), )
+  True
+
+  >>> nosm = folder.Folder()
+  >>> nosm['root'] = myfolder11
+  >>> myfolder11.getSiteManager().__bases__ == (gsm, )
   True
